Prevent overflow when open

--- a/sass/site/_nav.scss
+++ b/sass/site/_nav.scss
@@ -2,6 +2,8 @@
 
 $transition: 0.25s ease-in-out;
 
+grid-area: 1 / 1;
+z-index: 1; // Ensure nav is always on top of main content
 height: 4rem;
 display: inline-grid;
 grid-template: 1fr / 1fr auto;
@@ -9,23 +11,18 @@ align-items: start;
 transform: translateX(calc(-100% + 2.4rem + #{$gap}));
 transition: transform  $transition;
 
-// Create new stacking context to ensure overlap of animations toggle
-position: relative;
-z-index: 1;
-
 &[data-javascript-active="false"] {
 	height: auto;
 	transform: none;
 }
 
 &[data-open="true"] {
-	transform: none;
+	transform: translateX(#{-$gap});
 }
 
 .menu-button {
 	position: relative;
 	grid-area: 1 / 2;
-	z-index: 2;
 	margin-top: $gap;
 	margin-left: $gap / 2;
 	border: 0;
@@ -53,7 +50,7 @@ z-index: 1;
 	}
 
 	&::before {
-		z-index: -2;
+		z-index: -2; // Keep below ::after hover effect and text
 		top: -$gap / 2;
 		left: -$gap; // Extra gap is needed to prevent tearing when button is active
 		bottom: -$gap / 2;
@@ -67,7 +64,7 @@ z-index: 1;
 	}
 
 	&:hover:not(:active)::after {
-		z-index: -1;
+		z-index: -1;  // Keep below text
 		top: 0;
 		right: 0;
 		bottom: 0;
@@ -136,7 +133,7 @@ z-index: 1;
 
 .menu {
 	grid-area: 1 / 1;
-	z-index: 1;
+	margin-left: $gap; // Compensate for translateX(-$gap);
 	padding: $gap $gap $gap calc(#{max($gap, 1rem)} + 1ch);
 	border-bottom-right-radius: $border-rounded;
 	background: $colour-sea-dark;
